--- a/k07_Donguler/k07_Donguler.csproj
+++ b/k07_Donguler/k07_Donguler.csproj
@@ -46,16 +46,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DoWhileDongusu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DoWhileDongusu.Designer.cs">
+      <DependentUpon>DoWhileDongusu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ForDongusu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ForDongusu.Designer.cs">
+      <DependentUpon>ForDongusu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ForeachDongusu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ForeachDongusu.Designer.cs">
+      <DependentUpon>ForeachDongusu.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="WhileDongusu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WhileDongusu.Designer.cs">
+      <DependentUpon>WhileDongusu.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DoWhileDongusu.resx">
+      <DependentUpon>DoWhileDongusu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ForDongusu.resx">
+      <DependentUpon>ForDongusu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +87,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WhileDongusu.resx">
+      <DependentUpon>WhileDongusu.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
